...
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/divider_color" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
...
                android:layout_width="@dimen/dp_283"
                android:layout_height="@dimen/dp_49"
                android:layout_gravity="center"
                android:background="@drawable/shape_blue_rect">

                <TextView
                    android:id="@+id/tv_confirm"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/ripple_default"
                    android:gravity="center"
                    android:text="确 定"
                    android:textColor="#fff"
...
