...
        android:id="@+id/rg_pay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/rb_alipay"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_70"
            android:background="#00000000"
            android:button="@null"
            android:checked="@{data.selectedItem==PayMethod.ALIPAY}"
            android:drawableLeft="@drawable/ic_alipay"
...
