...
                android:visibility="@{data.errorVisible(data.error)}"
                tools:text="必填" />
        </LinearLayout>


        <Button
            android:id="@+id/btn_title"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_30"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="@dimen/dp_13"
            android:layout_marginEnd="@dimen/dp_13"
            android:background="@drawable/ripple_blue_rect"
...
