...
                android:textAppearance="@style/AppTheme.TextErrorAppearance"
                android:visibility="@{data.errorVisible(data.error)}"
                tools:text="必填" />
        </LinearLayout>

        <Button
            android:id="@+id/rb_male"
            android:layout_width="@dimen/dp_65"
            android:layout_height="@dimen/dp_30"
            android:layout_marginEnd="@dimen/dp_13"
            android:layout_marginRight="@dimen/dp_13"
            android:background="@drawable/selector_blue_rect"
            android:clickable="@{data.enabled}"
...
            android:selected="@{data.selectedItem==Gender.MALE}"
            android:text="男"
            android:textColor="@color/text_color_blue"
            android:textSize="@dimen/font_15" />

        <Button
            android:id="@+id/rb_female"
            android:layout_width="@dimen/dp_65"
            android:layout_height="@dimen/dp_30"
            android:layout_marginEnd="@dimen/dp_13"
            android:layout_marginRight="@dimen/dp_13"
            android:background="@drawable/selector_blue_rect"
            android:clickable="@{data.enabled}"
...
