...

                    <TextView
                        android:id="@+id/tv_done"
                        android:layout_width="50dp"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="完成"
                        android:textColor="@color/white" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_60"
...
