...
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/ripple_default"
                    android:gravity="center"
                    android:onClick="@{()->data.searchDoctor(context,data.type)}"
                    android:text="下一步"
                    android:textColor="#fff"
                    android:textSize="@dimen/font_17" />
            </FrameLayout>

            <View
                android:layout_width="0dp"
...
